# smplr

./: .gitignore  README.md  TODO.txt  pyproject.toml  setup.cfg
.github/workflows/: python-test.yml
smplr/: util.py
tests/: test_util.py
