[tool.poetry]
name = "smplr"
version = "0.1.0"
description = "A convenience package for the full analysis cycle. From importing the measurement data over analysing a given model to exporting the final results as plots."
authors = ["Jonathan Sigrist <jonathan.sigrist@xitaso.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
scipy = "^1.11.4"
uncertainties = "^3.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = {extras = ["toml"], version = "^7.3.2"}
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
flake8-bugbear = "^23.12.2"
flake8-docstrings = "^1.7.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
skip-string-normalization = true

[tool.flake8]
max-line-length = 160
max-complexity = 10
ignore = "D105,W503"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100
